--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,7 @@
 }
 
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   color: var(--main-text-color);
   background-color: var(--color-white);
   font-size: 14px;
@@ -54,7 +54,7 @@ header .container {
 
 .logo {
   margin-left: 215px;
-  font-family: "Raleway", sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
@@ -171,9 +171,13 @@ header .container {
 }
 
 /* ---------------------------------Our Benefits---------------------------------- */
-
 .benefits-list {
+  display: flex;
   list-style: none;
+  margin-top: 94px;
+  margin-left: 215px;
+  margin-right: 215px;
+  margin-bottom: 94px;
 }
 
 .benefit-title {
@@ -187,11 +191,21 @@ header .container {
 .benefit-text {
   font-size: 14px;
   line-height: 1.71;
+  width: 270px;
+}
+
+.benefits-item {
+  margin-right: 30px;
+}
+
+.benefits-item:last-child {
+  margin-right: 0px;
 }
 
 /* ---------------------------Our competencies---------------------------- */
 
 .competencies-title {
+  margin-bottom: 50px;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
@@ -202,16 +216,29 @@ header .container {
 
 .competencies-list {
   list-style: none;
+  display: flex;
+  justify-content: center;
+  padding-bottom: 92px;
+}
+
+.competencies-item {
+  margin-right: 30px;
+  height: 294px;
+}
+
+.competencies-item:last-child {
+  margin-right: 0px;
 }
 
 /* --------------------------------------Our Team--------------------------------- */
 
 .team {
+  padding-top: 92px;
   background-color: var(--team-bg-color);
 }
 
-.team-card {
-  background-color: var(--color-white);
+.team .container {
+  height: 648px;
 }
 
 .team-title {
@@ -224,23 +251,40 @@ header .container {
 }
 
 .team-list {
+  display: flex;
   list-style: none;
+  margin-top: 50px;
+  text-align: center;
+  margin-left: 215px;
+  margin-right: 215px;
+}
+
+.team-card {
+  margin-right: 30px;
+  background-color: var(--color-white);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+
+.team-card:last-child {
+  margin-right: 0px;
 }
 
 .team-names {
+  padding-top: 30px;
+  padding-bottom: 10px;
   font-weight: 500;
   font-size: 16px;
-  line-height: 1.18px;
-  /* text-align: center; */
+  line-height: 1.187;
   letter-spacing: 0.03em;
   text-transform: none;
   color: var(--title-text-color);
 }
 
 .team-position {
+  padding-bottom: 30px;
   font-size: 16px;
-  line-height: 1.18;
-  /* text-align: center; */
+  line-height: 1.187;
   letter-spacing: 0.03em;
 }
 
@@ -250,8 +294,13 @@ footer {
   background-color: #2f303a;
 }
 
+footer .container {
+  padding: 60px 0px;
+  margin-left: 215px;
+}
+
 .footer-logo {
-  font-family: "Raleway", sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
@@ -264,11 +313,16 @@ footer {
 }
 
 .footer-address {
+  padding-top: 20px;
   font-style: normal;
 }
 
 .footer-contacts {
   list-style: none;
+}
+
+.footer-item {
+  padding-top: 9px;
 }
 
 .footer-contacts .location {
@@ -291,11 +345,19 @@ footer {
 }
 
 /* --------------------------------------------- Portfolio main---------------------------------- */
+
+.filter .container {
+  margin-top: 94px;
+}
+
 .filter-list {
+  display: flex;
   list-style: none;
+  margin-left: 512px;
 }
 
 .filter-button {
+  padding: 6px 22px;
   background-color: var(--team-bg-color);
   color: #212121;
   font-weight: 500;
@@ -309,23 +371,53 @@ footer {
   cursor: pointer;
 }
 
+.filter-item {
+  margin-right: 8px;
+}
+
+.filter-item:nth-child(3n) {
+  margin-right: 0px;
+}
+
 .filter-button:hover,
 .filter-button:focus {
   background-color: var(--accent-color);
   color: var(--color-white);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .active {
+  padding: 6px 25px;
   background-color: var(--accent-color);
   color: var(--color-white);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .filtered-list {
   list-style: none;
+}
+
+.filtered-list .container {
+  display: flex;
+  flex-wrap: wrap;
+  width: 1170px;
+  margin-top: 50px;
+  margin-bottom: 94px;
+  margin-left: 215px;
+  margin-right: 215px;
+}
+
+.filtered-products {
+  width: 370px;
+  height: 404px;
+  margin-bottom: 30px;
+  margin-right: 30px;
+  background: #ffffff;
+  border: 1px solid #eeeeee;
+}
+
+.filtered-products:nth-child(3n) {
+  margin-right: 0px;
 }
 
 .filtered-link {
@@ -333,6 +425,8 @@ footer {
 }
 
 .filtered-title {
+  padding-left: 24px;
+  padding-top: 20px;
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
@@ -342,8 +436,10 @@ footer {
 }
 
 .filtered-desc {
+  /* padding-top: 4px; */
+  padding-left: 24px;
   font-size: 16px;
-  line-height: 1.87px;
+  line-height: 1.875px;
   letter-spacing: 0.03em;
   color: var(--main-text-color);
 }
