--- a/css/styles.css
+++ b/css/styles.css
@@ -412,21 +412,30 @@ footer .container {
   height: 404px;
   margin-bottom: 30px;
   margin-right: 30px;
-  background: #ffffff;
-  border: 1px solid #eeeeee;
 }
 
 .filtered-products:nth-child(3n) {
   margin-right: 0px;
 }
 
+.filtered-products img {
+  display: block;
+}
+
 .filtered-link {
   text-decoration: none;
 }
 
+.filtered-text {
+  padding: 24px 20px;
+  width: 370px;
+  height: 110px;
+  background: #ffffff;
+  border: 1px solid #eeeeee;
+}
+
 .filtered-title {
-  padding-left: 24px;
-  padding-top: 20px;
+  padding-bottom: 4px;
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
@@ -436,8 +445,7 @@ footer .container {
 }
 
 .filtered-desc {
-  /* padding-top: 4px; */
-  padding-left: 24px;
+  padding-top: 4px;
   font-size: 16px;
   line-height: 1.875px;
   letter-spacing: 0.03em;
