--- a/css/styles.css
+++ b/css/styles.css
@@ -37,9 +37,16 @@ body {
   letter-spacing: 0.03em;
 }
 
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
 .container {
-  width: 1600px;
+  width: 1200px;
   margin: 0px auto;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 /* ------------------------------Header----------------------------- */
@@ -53,7 +60,6 @@ header .container {
 }
 
 .logo {
-  margin-left: 215px;
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 26px;
@@ -100,15 +106,16 @@ header .container {
 .contacts {
   display: flex;
   list-style: none;
-  margin-left: 344px;
+  margin-left: auto;
 }
 
 .contacts .item + .item {
   margin-left: 50px;
-  margin-right: 215px;
 }
 
 .contact-info {
+  padding-top: 32px;
+  padding-bottom: 32px;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -129,15 +136,14 @@ header .container {
 }
 
 .hero .container {
-  display: inline-block;
+  padding-top: 200px;
+  padding-bottom: 200px;
   background-color: var(--hero-bg-color);
-  height: 600px;
 }
 
 .hero-text {
   width: 696px;
-  margin-top: 200px;
-  margin-left: 452px;
+  margin: auto;
   margin-bottom: 30px;
   font-weight: 900;
   font-size: 44px;
@@ -174,10 +180,6 @@ header .container {
 .benefits-list {
   display: flex;
   list-style: none;
-  margin-top: 94px;
-  margin-left: 215px;
-  margin-right: 215px;
-  margin-bottom: 94px;
 }
 
 .benefit-title {
@@ -203,6 +205,10 @@ header .container {
 }
 
 /* ---------------------------Our competencies---------------------------- */
+.competencies {
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
 
 .competencies-title {
   margin-bottom: 50px;
@@ -233,12 +239,7 @@ header .container {
 /* --------------------------------------Our Team--------------------------------- */
 
 .team {
-  padding-top: 92px;
   background-color: var(--team-bg-color);
-}
-
-.team .container {
-  height: 648px;
 }
 
 .team-title {
@@ -255,8 +256,6 @@ header .container {
   list-style: none;
   margin-top: 50px;
   text-align: center;
-  margin-left: 215px;
-  margin-right: 215px;
 }
 
 .team-card {
@@ -270,9 +269,16 @@ header .container {
   margin-right: 0px;
 }
 
+.team-card img {
+  display: block;
+}
+
+.team-text {
+  padding: 30px 0px;
+}
+
 .team-names {
-  padding-top: 30px;
-  padding-bottom: 10px;
+  margin-bottom: 10px;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.187;
@@ -282,7 +288,6 @@ header .container {
 }
 
 .team-position {
-  padding-bottom: 30px;
   font-size: 16px;
   line-height: 1.187;
   letter-spacing: 0.03em;
@@ -296,7 +301,6 @@ footer {
 
 footer .container {
   padding: 60px 0px;
-  margin-left: 215px;
 }
 
 .footer-logo {
@@ -313,7 +317,6 @@ footer .container {
 }
 
 .footer-address {
-  padding-top: 20px;
   font-style: normal;
 }
 
@@ -322,7 +325,11 @@ footer .container {
 }
 
 .footer-item {
-  padding-top: 9px;
+  margin-top: 9px;
+}
+
+.footer-item:first-child {
+  margin-top: 20px;
 }
 
 .footer-contacts .location {
@@ -346,14 +353,11 @@ footer .container {
 
 /* --------------------------------------------- Portfolio main---------------------------------- */
 
-.filter .container {
-  margin-top: 94px;
-}
-
 .filter-list {
   display: flex;
   list-style: none;
-  margin-left: 512px;
+  justify-content: center;
+  margin-bottom: 50px;
 }
 
 .filter-button {
@@ -375,7 +379,7 @@ footer .container {
   margin-right: 8px;
 }
 
-.filter-item:nth-child(3n) {
+.filter-item:last-child {
   margin-right: 0px;
 }
 
@@ -394,22 +398,13 @@ footer .container {
 }
 
 .filtered-list {
-  list-style: none;
-}
-
-.filtered-list .container {
   display: flex;
   flex-wrap: wrap;
-  width: 1170px;
-  margin-top: 50px;
-  margin-bottom: 94px;
-  margin-left: 215px;
-  margin-right: 215px;
+  list-style: none;
 }
 
 .filtered-products {
   width: 370px;
-  height: 404px;
   margin-bottom: 30px;
   margin-right: 30px;
 }
@@ -445,9 +440,8 @@ footer .container {
 }
 
 .filtered-desc {
-  padding-top: 4px;
   font-size: 16px;
-  line-height: 1.875px;
+  line-height: 1.875;
   letter-spacing: 0.03em;
   color: var(--main-text-color);
 }
