--- a/css/styles.css
+++ b/css/styles.css
@@ -131,16 +131,26 @@ header .container {
 }
 
 /* ------------------------------------Main----------------------------------- */
+.overlay {
+  max-width: 1600px;
+  min-height: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  background-image: linear-gradient(to right, 
+  rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+  url('../images/hero-overlay.jpg');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
 
 .hero {
-  padding-top: 200px;
-  padding-bottom: 200px;
-  background-color: var(--hero-bg-color);
   text-align: center;
 }
 
 .hero-text {
   width: 696px;
+  padding-top: 200px;
   margin: auto;
   margin-bottom: 30px;
   font-weight: 900;
