--- a/css/styles.css
+++ b/css/styles.css
@@ -10,11 +10,11 @@
   --hero-button-active: #188ce8;
   --footer-bg-color: #2f303a;
   --footer-contact-color: rgba(255, 255, 255, 0.6);
-  --hero-bg-color: #2f303a;
+  --hero-bg-color: #c4c4c4;
   --grey-bg-color: #f5f4fa;
   --color-white: #ffffff;
   --color-black: #000000;
-  --clients-color: #afb1b8;
+  --main-svg-color: #afb1b8;
 }
 
 .visually-hidden {
@@ -147,20 +147,24 @@ header .container {
 }
 
 .contact-info:hover .icon-envelope,
-.contact-info:hover .icon-smartphone {
+.contact-info:hover .icon-smartphone,
+.contact-info:focus .icon-envelope,
+.contact-info:focus .icon-smartphone {
   fill: var(--accent-color);
 }
 
 /* ------------------------------------Main----------------------------------- */
 .overlay {
+  padding-top: 200px;
+  padding-bottom: 200px;
   max-width: 1600px;
-  min-height: 600px;
   margin-left: auto;
   margin-right: auto;
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url('../images/hero-overlay.jpg');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+  background-color: var(--hero-bg-color);
 }
 
 .hero {
@@ -173,7 +177,6 @@ header .container {
 
 .hero-text {
   width: 696px;
-  padding-top: 200px;
   margin: auto;
   margin-bottom: 30px;
   font-weight: 900;
@@ -331,7 +334,7 @@ header .container {
 }
 
 .team-text {
-  padding: 30px 0px;
+  padding-top: 30px;
 }
 
 .team-names {
@@ -353,6 +356,7 @@ header .container {
 
 .social-icons {
   display: inline-flex;
+  padding-bottom: 30px;
 }
 
 .round-icon {
@@ -370,14 +374,16 @@ header .container {
 }
 
 .icon {
-  fill: var(--main-text-color);
+  fill: var(--main-svg-color);
 }
 
-.round-icon:hover {
+.round-icon:hover,
+.round-icon:focus {
   background-color: var(--accent-color);
 }
 
-.round-icon:hover .icon {
+.round-icon:hover .icon,
+.round-icon:focus .icon {
   fill: var(--color-white);
 }
 
@@ -398,26 +404,32 @@ header .container {
   display: inline-flex;
 }
 
+.clients-item {
+  margin-right: 30px;
+}
+
+.clients-item:last-child {
+  margin-right: 0px;
+}
+
 .bordered-icon {
   display: flex;
   align-items: center;
   justify-content: center;
   width: 170px;
   height: 92px;
-  margin-right: 30px;
-  border: 1px solid var(--clients-color);
+  border: 1px solid var(--main-svg-color);
   border-radius: 4px;
+  fill: var(--main-svg-color);
 }
 
-.bordered-icon:last-child {
-  margin-right: 0px;
-}
-
-.bordered-icon:hover {
+.bordered-icon:hover,
+.bordered-icon:focus {
   border: 1px solid var(--accent-color);
 }
 
-.bordered-icon:hover .icon {
+.bordered-icon:hover .icon,
+.bordered-icon:focus .icon {
   fill: var(--accent-color);
 }
 
@@ -505,7 +517,8 @@ header .container {
   background-color: #44454e;
 }
 
-.footer-social-list .round-icon:hover {
+.footer-social-list .round-icon:hover,
+.footer-social-list .round-icon:focus {
   background-color: var(--accent-color);
 }
 
@@ -587,12 +600,13 @@ header .container {
   display: block;
 }
 
-.filtered-products:hover {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+.filtered-link {
+  display: block;
+  text-decoration: none;
 }
 
-.filtered-link {
-  text-decoration: none;
+.filtered-link:hover {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .filtered-text {
