--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,8 @@
   --color-white: #ffffff;
   --color-black: #000000;
   --main-svg-color: #afb1b8;
+  --backdrop-bg-color: rgba(0, 0, 0, 0.2);
+  --overlay-text-bg-color: #2f303acc;
 }
 
 .visually-hidden {
@@ -92,6 +94,7 @@ header .container {
   padding-top: 32px;
   padding-bottom: 32px;
   color: var(--title-text-color);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -105,7 +108,21 @@ header .container {
 }
 
 .current {
+  position: relative;
   color: var(--accent-color);
+}
+
+.current::after {
+  content: '';
+  display: block;
+  position: absolute;
+  width: 48px;
+  height: 4px;
+  background-color: var(--accent-color);
+  transform: translate(-50%, -50%);
+  top: 99%;
+  left: 50%;
+  border-radius: 2px;
 }
 
 .contacts {
@@ -123,6 +140,7 @@ header .container {
   align-items: center;
   padding-top: 32px;
   padding-bottom: 32px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -138,11 +156,13 @@ header .container {
 
 .icon-envelope {
   margin-right: 10px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   fill: var(--main-text-color);
 }
 
 .icon-smartphone {
   margin-right: 10px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   fill: var(--main-text-color);
 }
 
@@ -195,6 +215,7 @@ header .container {
   line-height: 1.87;
   text-align: inherit;
   letter-spacing: 0.06em;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   color: var(--color-white);
   background-color: var(--accent-color);
   width: 216px;
@@ -288,12 +309,33 @@ header .container {
 }
 
 .competencies-item {
+  position: relative;
   margin-right: 30px;
   height: 294px;
 }
 
 .competencies-item:last-child {
   margin-right: 0px;
+}
+
+.overlay-text {
+  content: '';
+  position: absolute;
+  bottom: 0%;
+  left: 50%;
+  width: 370px;
+  transform: translate(-50%, 0%);
+  font-family: inherit;
+  padding-top: 27px;
+  padding-bottom: 27px;
+  color: var(--color-white);
+  background-color: var(--overlay-text-bg-color);
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
 }
 
 /* --------------------------------------Our Team--------------------------------- */
@@ -367,6 +409,7 @@ header .container {
   height: 44px;
   margin-right: 10px;
   border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .round-icon:last-child {
@@ -418,6 +461,7 @@ header .container {
   justify-content: center;
   width: 170px;
   height: 92px;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   border: 1px solid var(--main-svg-color);
   border-radius: 4px;
   fill: var(--main-svg-color);
@@ -426,6 +470,10 @@ header .container {
 .bordered-icon:hover,
 .bordered-icon:focus {
   border: 1px solid var(--accent-color);
+}
+
+.bordered-icon .icon {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .bordered-icon:hover .icon,
@@ -481,6 +529,7 @@ header .container {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   color: var(--footer-contact-color);
   text-decoration: none;
 }
@@ -515,6 +564,7 @@ header .container {
   width: 44px;
   height: 44px;
   background-color: #44454e;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-social-list .round-icon:hover,
@@ -534,6 +584,56 @@ header .container {
   fill: var(--color-white);
 }
 
+/* ---------------------------------------------Modal------------------------ */
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--backdrop-bg-color);
+  opacity: 1;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden {
+  visibility: visible;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0.9);
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  min-height: 581px;
+  min-width: 528px;
+  background-color: var(--color-white);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close-icon-button {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  background-color: var(--color-white);
+  border: 0;
+}
+
+.close-icon {
+  cursor: pointer;
+  background-image: url(../images/close.svg);
+}
+
 /* --------------------------------------------- Portfolio main---------------------------------- */
 
 .filter-list {
@@ -547,6 +647,8 @@ header .container {
   padding: 6px 22px;
   background-color: var(--grey-bg-color);
   color: #212121;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   font-weight: 500;
   font-size: 16px;
   font-family: inherit;
@@ -602,14 +704,64 @@ header .container {
 
 .filtered-link {
   display: block;
+  position: relative;
   text-decoration: none;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .filtered-link:hover {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
+.filtered-link::before {
+  display: inline-block;
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 0%;
+  transform: translateY(100%);
+  background-color: var(--accent-color);
+  opacity: 0;
+  transition-property: transform, background-color, opacity height;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.filtered-link:hover::before,
+.filtered-link:focus::before {
+  height: 80%;
+  transform: translateY(0%);
+  background-color: var(--accent-color);
+  opacity: 0.9;
+}
+
+.filtered-link .portfolio-overlay-text {
+  content: '';
+  position: absolute;
+  display: block;
+  padding: 63px 24px;
+  transform: translateY(100%);
+  transition-property: opacity, transform;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  font-family: inherit;
+  font-size: 18px;
+  line-height: 1.55;
+  color: var(--color-white);
+  letter-spacing: 0.03em;
+  opacity: 0;
+}
+
+.filtered-link:hover .portfolio-overlay-text,
+.filtered-link:focus .portfolio-overlay-text {
+  opacity: 1;
+  transform: translateY(0%);
+}
+
 .filtered-text {
+  position: relative;
   padding: 24px 20px;
   width: 370px;
   height: 110px;
