--- a/css/styles.css
+++ b/css/styles.css
@@ -717,14 +717,12 @@ header .container {
   display: inline-block;
   content: '';
   position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
   height: 0%;
   transform: translateY(100%);
   background-color: var(--accent-color);
   opacity: 0;
-  transition-property: transform, background-color, opacity height;
+  transition-property: transform, background-color, opacity, height;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -740,8 +738,6 @@ header .container {
 .filtered-link .portfolio-overlay-text {
   content: '';
   position: absolute;
-  display: block;
-  padding: 63px 24px;
   transform: translateY(100%);
   transition-property: opacity, transform;
   transition-duration: 250ms;
@@ -756,6 +752,7 @@ header .container {
 
 .filtered-link:hover .portfolio-overlay-text,
 .filtered-link:focus .portfolio-overlay-text {
+  padding: 63px 24px;
   opacity: 1;
   transform: translateY(0%);
 }
