--- a/css/styles.css
+++ b/css/styles.css
@@ -116,7 +116,7 @@ header .container {
   content: '';
   display: block;
   position: absolute;
-  width: 48px;
+  width: 100%;
   height: 4px;
   background-color: var(--accent-color);
   transform: translate(-50%, -50%);
@@ -397,7 +397,9 @@ header .container {
 }
 
 .social-icons {
-  display: inline-flex;
+  display: flex;
+  justify-content: center;
+  gap: 10px;
   padding-bottom: 30px;
 }
 
@@ -407,17 +409,13 @@ header .container {
   justify-content: center;
   width: 44px;
   height: 44px;
-  margin-right: 10px;
   border-radius: 50%;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.round-icon:last-child {
-  margin-right: 0px;
+  transition: background-color 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon {
   fill: var(--main-svg-color);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .round-icon:hover,
@@ -707,40 +705,19 @@ header .container {
   position: relative;
   text-decoration: none;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  overflow: hidden;
 }
 
 .filtered-link:hover {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.filtered-link::before {
-  display: inline-block;
-  content: '';
-  position: absolute;
-  width: 100%;
-  height: 0%;
-  transform: translateY(100%);
-  background-color: var(--accent-color);
-  opacity: 0;
-  transition-property: transform, background-color, opacity, height;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.filtered-link:hover::before,
-.filtered-link:focus::before {
-  height: 80%;
-  transform: translateY(0%);
-  background-color: var(--accent-color);
-  opacity: 0.9;
-}
-
 .filtered-link .portfolio-overlay-text {
-  content: '';
   position: absolute;
-  padding: 0px 24px;
+  height: 100%;
+  padding: 63px 24px;
   transform: translateY(100%);
-  transition-property: opacity, transform, padding;
+  transition-property: opacity, transform;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   font-family: inherit;
@@ -753,18 +730,17 @@ header .container {
 
 .filtered-link:hover .portfolio-overlay-text,
 .filtered-link:focus .portfolio-overlay-text {
-  padding: 63px 24px;
-  opacity: 1;
+  background-color: var(--accent-color);
+  opacity: 0.9;
   transform: translateY(0%);
 }
 
 .filtered-text {
   position: relative;
   padding: 24px 20px;
-  width: 370px;
-  height: 110px;
   background: #ffffff;
   border: 1px solid #eeeeee;
+  border-top: 0;
 }
 
 .filtered-title {
