--- a/css/styles.css
+++ b/css/styles.css
@@ -673,6 +673,7 @@ header .container {
 }
 
 .modal {
+  padding: 40px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -695,20 +696,16 @@ header .container {
 }
 
 .close-icon {
-  fill: var(--color-black);
   cursor: pointer;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .close-icon:hover,
-.close-icon:focus {
+.close-icon-button:focus .close-icon {
   fill: var(--accent-color);
 }
 
 /* -------------------------------------form------------------------------- */
-.form {
-  padding: 40px;
-}
 
 .form-title {
   font-family: inherit;
@@ -722,11 +719,10 @@ header .container {
 
 .form-item {
   position: relative;
+  margin-top: 10px;
 }
 
 .form-lable {
-  position: absolute;
-  padding-top: 10px;
   font-family: inherit;
   font-size: 12px;
   line-height: 1.16;
@@ -734,10 +730,10 @@ header .container {
 }
 
 .form-input {
+  margin-top: 4px;
+  padding-left: 42px;
   width: 100%;
   height: 40px;
-  margin-top: 30px;
-  padding-left: 42px;
   border: 1px solid var(--form-border-color);
   border-radius: 4px;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -753,10 +749,8 @@ header .container {
 .form-icon {
   display: block;
   position: absolute;
-  top: 0;
-  left: 0;
-  margin-top: 41px;
-  margin-left: 14px;
+  top: 51%;
+  left: 14px;
   fill: var(--color-black);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
