--- a/sass/components/_benefits-section.scss
+++ b/sass/components/_benefits-section.scss
@@ -40,18 +40,18 @@
   }
 
   &__icon--antenna::before {
-    background-image: url('/images/antenna.svg');
+    background-image: url('../../images/antenna.svg');
   }
 
   &__icon--clock::before {
-    background-image: url('/images/clock.svg');
+    background-image: url('../../images/clock.svg');
   }
 
   &__icon--diagram::before {
-    background-image: url('/images/diagram.svg');
+    background-image: url('../../images/diagram.svg');
   }
 
   &__icon--astronaut::before {
-    background-image: url('/images/astronaut.svg');
+    background-image: url('../../images/astronaut.svg');
   }
 }
