--- a/sass/components/_hero-section.scss
+++ b/sass/components/_hero-section.scss
@@ -4,7 +4,7 @@
   max-width: 1600px;
   margin-left: auto;
   margin-right: auto;
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url('/images/hero-overlay.jpg');
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url('../../images/hero-overlay.jpg');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
