--- a/css/main.css
+++ b/css/main.css
@@ -427,6 +427,7 @@ ul {
 .page-footer__container {
   display: flex;
   justify-content: space-between;
+  align-items: baseline;
 }
 .page-footer__adress {
   display: flex;
@@ -790,7 +791,7 @@ ul {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   overflow: hidden;
 }
-.filtered__link:hover {
+.filtered__link:hover, .filtered__link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 .filtered__text--overlay {
