--- a/sass/main.scss
+++ b/sass/main.scss
@@ -29,6 +29,11 @@ ul {
 
 .section {
   @extend %section;
+
+  @media (min-width: 768px) and (max-width: 1199px) {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
 }
 
 .container {
