--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -45,10 +45,21 @@ $form-border-color: rgba(33, 33, 33, 0.2);
 }
 
 %container {
-  width: 1200px;
   margin: 0px auto;
   padding-left: 15px;
   padding-right: 15px;
+
+  @media screen and (min-width: 480px) {
+    width: 480px;
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 768px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 1200px;
+  }
 }
 
 %header-text-style {
