--- a/css/main.css
+++ b/css/main.css
@@ -30,10 +30,24 @@ ul {
 }
 
 .container {
-  width: 1200px;
   margin: 0px auto;
   padding-left: 15px;
   padding-right: 15px;
+}
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
 }
 
 .navigation__link {
@@ -86,19 +100,36 @@ ul {
 .page-header__container {
   display: flex;
   align-items: center;
-  width: 1200px;
   margin: 0px auto;
   padding-left: 15px;
   padding-right: 15px;
 }
+@media (min-width: 768px) and (max-width: 1199px) {
+  .page-header__container {
+    width: 100%;
+    justify-content: space-between;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .page-header__container {
+    width: 1200px;
+  }
+}
 
 .navigation {
   display: flex;
-  margin-left: 93px;
   list-style: none;
 }
-.navigation__item {
-  margin-left: 50px;
+@media (min-width: 768px) and (max-width: 1199px) {
+  .navigation {
+    gap: 50px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .navigation {
+    margin-left: 93px;
+    gap: 50px;
+  }
 }
 .navigation__link {
   display: block;
@@ -131,13 +162,32 @@ ul {
   display: flex;
   margin-top: 0px;
   margin-bottom: 0px;
-  margin-left: auto;
 }
-.contacts__item {
-  margin-left: 50px;
+@media (min-width: 768px) and (max-width: 1199px) {
+  .contacts {
+    flex-direction: column;
+    gap: 10px;
+  }
 }
-.contacts__item:first-child {
-  margin-left: 0px;
+@media screen and (min-width: 1200px) {
+  .contacts {
+    margin-left: auto;
+  }
+}
+@media (min-width: 768px) and (max-width: 1199px) {
+  .contacts__item {
+    margin-left: 0px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .contacts__item {
+    margin-left: 50px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .contacts__item:first-child {
+    margin-left: 0px;
+  }
 }
 .contacts__link {
   display: flex;
@@ -145,6 +195,12 @@ ul {
   padding-top: 32px;
   padding-bottom: 32px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media (min-width: 768px) and (max-width: 1199px) {
+  .contacts__link {
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
 }
 .contacts__link:hover, .contacts__link:focus {
   color: #2196f3;
@@ -187,6 +243,12 @@ ul {
   background-repeat: no-repeat;
   background-color: #c4c4c4;
 }
+@media (min-width: 768px) and (max-width: 1199px) {
+  .hero__overlay {
+    padding-top: 118px;
+    padding-bottom: 118px;
+  }
+}
 
 .hero {
   max-width: 1600px;
@@ -228,9 +290,30 @@ ul {
   background-color: #188ce8;
 }
 
+@media (min-width: 768px) and (max-width: 1199px) {
+  .benefits {
+    display: flex;
+  }
+}
 .benefits__list {
   display: flex;
   list-style: none;
+}
+@media (min-width: 768px) and (max-width: 1199px) {
+  .benefits__list {
+    flex-wrap: wrap;
+    gap: 30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .benefits__list {
+    gap: 30px;
+  }
+}
+@media (min-width: 768px) and (max-width: 1199px) {
+  .benefits__item {
+    flex-basis: 47.95%;
+  }
 }
 .benefits__title {
   margin-bottom: 10px;
@@ -245,12 +328,6 @@ ul {
   font-size: 14px;
   line-height: 1.71;
   width: 270px;
-}
-.benefits__item {
-  margin-right: 30px;
-}
-.benefits__item:last-child {
-  margin-right: 0px;
 }
 .benefits__item::before {
   display: block;
@@ -276,6 +353,11 @@ ul {
 
 .competencies {
   padding-top: 0px;
+}
+@media screen and (max-width: 1199px) {
+  .competencies {
+    display: none;
+  }
 }
 .competencies__title {
   margin-bottom: 50px;
@@ -333,21 +415,34 @@ ul {
 }
 .team__list {
   display: flex;
+  gap: 30px;
   list-style: none;
   margin-top: 50px;
   text-align: center;
 }
+@media (min-width: 768px) and (max-width: 1199px) {
+  .team__list {
+    flex-wrap: wrap;
+  }
+}
 .team__card {
-  margin-right: 30px;
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
-.team__card:last-child {
-  margin-right: 0px;
+@media (min-width: 768px) and (max-width: 1199px) {
+  .team__card {
+    flex-basis: 47.95%;
+  }
 }
 .team__card img {
   display: block;
+}
+@media (min-width: 768px) and (max-width: 1199px) {
+  .team__card img {
+    width: 100%;
+    height: inherit;
+  }
 }
 .team__meta {
   padding-top: 30px;
@@ -384,14 +479,20 @@ ul {
   color: #212121;
   margin-bottom: 50px;
 }
+@media (min-width: 768px) and (max-width: 1199px) {
+  .clients__title {
+    margin-bottom: 30px;
+  }
+}
 .clients__list {
-  display: inline-flex;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
 }
-.clients__item {
-  margin-right: 30px;
-}
-.clients__item:last-child {
-  margin-right: 0px;
+@media (min-width: 768px) and (max-width: 1199px) {
+  .clients__list {
+    gap: 30px;
+  }
 }
 
 .bordered-icon {
@@ -404,6 +505,11 @@ ul {
   border: 1px solid #afb1b8;
   border-radius: 4px;
   fill: #afb1b8;
+}
+@media (min-width: 768px) and (max-width: 1199px) {
+  .bordered-icon {
+    width: 226px;
+  }
 }
 
 .bordered-icon:hover,
@@ -428,6 +534,13 @@ ul {
   display: flex;
   justify-content: space-between;
   align-items: baseline;
+}
+@media (min-width: 768px) and (max-width: 1199px) {
+  .page-footer__container {
+    justify-content: space-around;
+    flex-wrap: wrap;
+    text-align: center;
+  }
 }
 .page-footer__adress {
   display: flex;
@@ -508,6 +621,11 @@ ul {
   fill: #ffffff;
 }
 
+@media (min-width: 768px) and (max-width: 1199px) {
+  .subscribe {
+    margin-top: 60px;
+  }
+}
 .subscribe-form {
   display: flex;
   flex-direction: column;
@@ -516,6 +634,12 @@ ul {
   display: flex;
   margin-top: 20px;
   gap: 12px;
+}
+@media (min-width: 768px) and (max-width: 1199px) {
+  .subscribe--column {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 .subscribe__label {
   font-family: inherit;
@@ -536,6 +660,11 @@ ul {
   border-radius: 4px;
   color: #ffffff;
   outline: #757575;
+}
+@media (min-width: 768px) and (max-width: 1199px) {
+  .subscribe__input {
+    width: 450px;
+  }
 }
 .subscribe__button {
   display: flex;
@@ -597,6 +726,11 @@ ul {
   border-radius: 4px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+@media (min-width: 768px) and (max-width: 1199px) {
+  .modal {
+    min-width: 450px;
+  }
+}
 .modal__close-button {
   position: absolute;
   top: 8px;
@@ -621,6 +755,11 @@ ul {
   text-align: center;
   letter-spacing: 0.03em;
   color: #212121;
+}
+@media (min-width: 768px) and (max-width: 1199px) {
+  .modal__title {
+    line-height: 1.5;
+  }
 }
 .modal__item {
   position: relative;
@@ -692,6 +831,13 @@ ul {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: #757575;
+}
+@media (min-width: 768px) and (max-width: 1199px) {
+  .modal__policy {
+    align-items: flex-end;
+    font-size: 12px;
+    line-height: 1.16;
+  }
 }
 .modal__link {
   color: #2196f3;
@@ -840,4 +986,11 @@ ul {
 * {
   margin: 0;
   padding: 0;
+}
+
+@media (min-width: 768px) and (max-width: 1199px) {
+  .section {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
 }/*# sourceMappingURL=main.css.map */
