--- a/sass/components/_hero-section.scss
+++ b/sass/components/_hero-section.scss
@@ -9,6 +9,11 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-color: $hero-bg-color;
+
+  @media (min-width: 768px) and (max-width: 1199px) {
+    padding-top: 118px;
+    padding-bottom: 118px;
+  }
 }
 
 .hero {
