--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -31,6 +31,10 @@
   border-radius: 4px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
+  @media (min-width: 768px) and (max-width: 1199px) {
+    min-width: 450px;
+  }
+
   &__close-button {
     position: absolute;
     top: 8px;
@@ -59,6 +63,10 @@
     text-align: center;
     letter-spacing: 0.03em;
     color: $title-text-color;
+
+    @media (min-width: 768px) and (max-width: 1199px) {
+      line-height: 1.5;
+    }
   }
 
   &__item {
@@ -123,6 +131,12 @@
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: $main-text-color;
+
+    @media (min-width: 768px) and (max-width: 1199px) {
+      align-items: flex-end;
+      font-size: 12px;
+      line-height: 1.16;
+    }
   }
 
   &__link {
