--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -6,6 +6,12 @@
     display: flex;
     justify-content: space-between;
     align-items: baseline;
+
+    @media (min-width: 768px) and (max-width: 1199px) {
+      justify-content: space-around;
+      flex-wrap: wrap;
+      text-align: center;
+    }
   }
 
   &__adress {
@@ -105,6 +111,10 @@
 }
 
 .subscribe {
+  @media (min-width: 768px) and (max-width: 1199px) {
+    margin-top: 60px;
+  }
+
   &-form {
     display: flex;
     flex-direction: column;
@@ -114,6 +124,11 @@
     display: flex;
     margin-top: 20px;
     gap: 12px;
+
+    @media (min-width: 768px) and (max-width: 1199px) {
+      flex-direction: column;
+      align-items: center;
+    }
   }
 
   &__label {
@@ -136,6 +151,10 @@
     border-radius: 4px;
     color: $color-white;
     outline: $main-text-color;
+
+    @media (min-width: 768px) and (max-width: 1199px) {
+      width: 450px;
+    }
   }
 
   &__button {
