--- a/sass/components/_benefits-section.scss
+++ b/sass/components/_benefits-section.scss
@@ -6,18 +6,22 @@
   &__list {
     display: flex;
     list-style: none;
+    gap: 30px;
+
+    @media screen and (max-width: 767px) {
+      flex-wrap: wrap;
+    }
 
     @media (min-width: 768px) and (max-width: 1199px) {
       flex-wrap: wrap;
-      gap: 30px;
-    }
-
-    @media screen and (min-width: 1200px) {
-      gap: 30px;
     }
   }
 
   &__item {
+    @media screen and (max-width: 767px) {
+      width: 100%;
+    }
+
     @media (min-width: 768px) and (max-width: 1199px) {
       flex-basis: calc(95.9% / 2);
     }
@@ -30,6 +34,10 @@
     line-height: 2;
     text-transform: uppercase;
     color: $title-text-color;
+
+    @media screen and (max-width: 767px) {
+      text-align: center;
+    }
   }
 
   &__text {
@@ -37,7 +45,10 @@
     font-size: 14px;
     line-height: 1.71;
     width: 270px;
-    // color: $main-text-color;
+
+    @media screen and (max-width: 767px) {
+      width: 100%;
+    }
   }
 
   &__item::before {
