--- a/sass/components/_hero-section.scss
+++ b/sass/components/_hero-section.scss
@@ -10,7 +10,7 @@
   background-repeat: no-repeat;
   background-color: $hero-bg-color;
 
-  @media (min-width: 768px) and (max-width: 1199px) {
+  @media screen and (max-width: 1199px) {
     padding-top: 118px;
     padding-bottom: 118px;
   }
@@ -34,6 +34,12 @@
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: $color-white;
+
+    @media screen and (max-width: 767px) {
+      width: 100%;
+      font-size: 26px;
+      line-height: 1.62;
+    }
   }
 
   &__button {
