--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -7,6 +7,13 @@
     justify-content: space-between;
     align-items: baseline;
 
+    @media screen and (max-width: 767px) {
+      flex-direction: column;
+      text-align: center;
+      align-items: center;
+      gap: 60px;
+    }
+
     @media (min-width: 768px) and (max-width: 1199px) {
       justify-content: space-around;
       flex-wrap: wrap;
@@ -125,9 +132,14 @@
     margin-top: 20px;
     gap: 12px;
 
-    @media (min-width: 768px) and (max-width: 1199px) {
+    @media screen and (max-width: 767px) {
       flex-direction: column;
       align-items: center;
+      gap: 20px;
+    }
+
+    @media (min-width: 768px) and (max-width: 1199px) {
+      flex-direction: column;
     }
   }
 
