--- a/sass/main.scss
+++ b/sass/main.scss
@@ -30,7 +30,7 @@ ul {
 .section {
   @extend %section;
 
-  @media (min-width: 768px) and (max-width: 1199px) {
+  @media screen and (max-width: 1199px) {
     padding-top: 60px;
     padding-bottom: 60px;
   }
