--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -1,4 +1,5 @@
 .page-header {
+  position: relative;
   border-bottom: 1px solid $header-bottom-line-color;
 }
 
@@ -8,6 +9,11 @@
   margin: 0px auto;
   padding-left: 15px;
   padding-right: 15px;
+
+  @media screen and (max-width: 767px) {
+    height: 60px;
+    justify-content: space-between;
+  }
 
   @media (min-width: 768px) and (max-width: 1199px) {
     width: 100%;
@@ -23,6 +29,27 @@
   display: flex;
   list-style: none;
 
+  @media screen and (max-width: 767px) {
+    display: none;
+
+    &.is-open {
+      display: block;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100vh;
+      padding-top: 48px;
+      padding-left: 40px;
+      background-color: $color-white;
+      overflow-y: hidden;
+
+      @media screen and (min-width: 768px) {
+        display: none;
+      }
+    }
+  }
+
   @media (min-width: 768px) and (max-width: 1199px) {
     gap: 50px;
   }
@@ -32,17 +59,133 @@
     gap: 50px;
   }
 
+  &-contacts-item {
+    @media screen and (min-width: 768px) {
+      display: none;
+    }
+
+    .contacts__link.tel {
+      margin-top: 302px;
+      margin-bottom: 30px;
+      font-size: 34px;
+      line-height: 1.17;
+      letter-spacing: 0.02em;
+      color: $accent-color;
+    }
+
+    .contacts__link {
+      font-size: 24px;
+      line-height: 1.16;
+      letter-spacing: 0.02em;
+    }
+  }
+
+  &.is-open .contacts-item {
+    position: absolute;
+    top: 562px;
+    left: 48px;
+  }
+
+  &__button {
+    display: inline-flex;
+    margin: 0;
+    padding: 0;
+    border: none;
+    background-color: transparent;
+
+    @media screen and (min-width: 768px) {
+      display: none;
+    }
+
+    &.is-open {
+      display: block;
+      position: fixed;
+      right: 16px;
+      top: 10px;
+      z-index: 10;
+
+      @media screen and (min-width: 768px) {
+        display: none;
+      }
+    }
+
+    &--icon-close {
+      display: none;
+    }
+
+    &.is-open &--icon-close {
+      display: block;
+    }
+
+    &.is-open &--icon-open {
+      display: none;
+    }
+  }
+
+  &__button:hover .navigation__button--icon,
+  &__button:focus .navigation__button--icon {
+    fill: $accent-color;
+  }
+
+  &__button--icon {
+    fill: $title-text-color;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
   &__link {
     display: block;
     padding-top: 32px;
     padding-bottom: 32px;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     @extend %header-text-style;
+
+    @media screen and (max-width: 767px) {
+      display: inline-block;
+      font-weight: 500;
+      font-size: 40px;
+      line-height: 1.17;
+      letter-spacing: 0.02em;
+    }
   }
 
   &__link:hover,
   &__link:focus {
     color: $accent-color;
+  }
+
+  &__link:last-child {
+    @media screen and (max-width: 767px) {
+      padding-top: 0;
+    }
+  }
+
+  & .socials {
+    display: flex;
+    margin-top: 64px;
+    gap: 20px;
+
+    @media screen and (min-width: 768px) {
+      display: none;
+    }
+  }
+
+  & .socials__item {
+    position: relative;
+    font-size: 18px;
+    line-height: 1.22;
+    letter-spacing: 0.02em;
+    color: $accent-color;
+    text-decoration: none;
+  }
+
+  & .socials__item:not(:last-child)::after {
+    content: '';
+    position: absolute;
+    bottom: 50%;
+    width: 22px;
+    height: 0px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    transform: rotate(90deg);
   }
 }
 
@@ -61,20 +204,26 @@
     top: 99%;
     left: 50%;
     border-radius: 2px;
+
+    @media screen and (max-width: 767px) {
+      display: none;
+    }
   }
 }
 
 .contacts {
-  display: flex;
+  display: none;
   margin-top: 0px;
   margin-bottom: 0px;
 
   @media (min-width: 768px) and (max-width: 1199px) {
+    display: flex;
     flex-direction: column;
     gap: 10px;
   }
 
   @media screen and (min-width: 1200px) {
+    display: flex;
     margin-left: auto;
   }
 
@@ -102,7 +251,7 @@
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     @extend %header-link-style;
 
-    @media (min-width: 768px) and (max-width: 1199px) {
+    @media screen and (max-width: 1199px) {
       padding-top: 0px;
       padding-bottom: 0px;
     }
@@ -117,12 +266,20 @@
     margin-right: 10px;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     fill: $main-text-color;
+
+    @media screen and (max-width: 767px) {
+      display: none;
+    }
   }
 
   &__icon--smartphone {
     margin-right: 10px;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     fill: $main-text-color;
+
+    @media screen and (max-width: 767px) {
+      display: none;
+    }
   }
 
   &__link:hover &__icon--envelope,
