--- a/css/main.css
+++ b/css/main.css
@@ -94,6 +94,7 @@ ul {
 }
 
 .page-header {
+  position: relative;
   border-bottom: 1px solid #ececec;
 }
 
@@ -103,6 +104,12 @@ ul {
   margin: 0px auto;
   padding-left: 15px;
   padding-right: 15px;
+}
+@media screen and (max-width: 767px) {
+  .page-header__container {
+    height: 60px;
+    justify-content: space-between;
+  }
 }
 @media (min-width: 768px) and (max-width: 1199px) {
   .page-header__container {
@@ -120,6 +127,28 @@ ul {
   display: flex;
   list-style: none;
 }
+@media screen and (max-width: 767px) {
+  .navigation {
+    display: none;
+  }
+  .navigation.is-open {
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    padding-top: 48px;
+    padding-left: 40px;
+    background-color: #ffffff;
+    overflow-y: hidden;
+  }
+}
+@media screen and (max-width: 767px) and (min-width: 768px) {
+  .navigation.is-open {
+    display: none;
+  }
+}
 @media (min-width: 768px) and (max-width: 1199px) {
   .navigation {
     gap: 50px;
@@ -131,14 +160,118 @@ ul {
     gap: 50px;
   }
 }
+@media screen and (min-width: 768px) {
+  .navigation-contacts-item {
+    display: none;
+  }
+}
+.navigation-contacts-item .contacts__link.tel {
+  margin-top: 302px;
+  margin-bottom: 30px;
+  font-size: 34px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+}
+.navigation-contacts-item .contacts__link {
+  font-size: 24px;
+  line-height: 1.16;
+  letter-spacing: 0.02em;
+}
+.navigation.is-open .contacts-item {
+  position: absolute;
+  top: 562px;
+  left: 48px;
+}
+.navigation__button {
+  display: inline-flex;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+}
+@media screen and (min-width: 768px) {
+  .navigation__button {
+    display: none;
+  }
+}
+.navigation__button.is-open {
+  display: block;
+  position: fixed;
+  right: 16px;
+  top: 10px;
+  z-index: 10;
+}
+@media screen and (min-width: 768px) {
+  .navigation__button.is-open {
+    display: none;
+  }
+}
+.navigation__button--icon-close {
+  display: none;
+}
+.navigation__button.is-open .navigation__button--icon-close {
+  display: block;
+}
+.navigation__button.is-open .navigation__button--icon-open {
+  display: none;
+}
+.navigation__button:hover .navigation__button--icon, .navigation__button:focus .navigation__button--icon {
+  fill: #2196f3;
+}
+.navigation__button--icon {
+  fill: #212121;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .navigation__link {
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+@media screen and (max-width: 767px) {
+  .navigation__link {
+    display: inline-block;
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+  }
+}
 .navigation__link:hover, .navigation__link:focus {
   color: #2196f3;
+}
+@media screen and (max-width: 767px) {
+  .navigation__link:last-child {
+    padding-top: 0;
+  }
+}
+.navigation .socials {
+  display: flex;
+  margin-top: 64px;
+  gap: 20px;
+}
+@media screen and (min-width: 768px) {
+  .navigation .socials {
+    display: none;
+  }
+}
+.navigation .socials__item {
+  position: relative;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+  text-decoration: none;
+}
+.navigation .socials__item:not(:last-child)::after {
+  content: "";
+  position: absolute;
+  bottom: 50%;
+  width: 22px;
+  height: 0px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  transform: rotate(90deg);
 }
 
 .current {
@@ -157,20 +290,27 @@ ul {
   left: 50%;
   border-radius: 2px;
 }
+@media screen and (max-width: 767px) {
+  .current::after {
+    display: none;
+  }
+}
 
 .contacts {
-  display: flex;
+  display: none;
   margin-top: 0px;
   margin-bottom: 0px;
 }
 @media (min-width: 768px) and (max-width: 1199px) {
   .contacts {
+    display: flex;
     flex-direction: column;
     gap: 10px;
   }
 }
 @media screen and (min-width: 1200px) {
   .contacts {
+    display: flex;
     margin-left: auto;
   }
 }
@@ -196,7 +336,7 @@ ul {
   padding-bottom: 32px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-@media (min-width: 768px) and (max-width: 1199px) {
+@media screen and (max-width: 1199px) {
   .contacts__link {
     padding-top: 0px;
     padding-bottom: 0px;
@@ -210,10 +350,20 @@ ul {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   fill: #757575;
 }
+@media screen and (max-width: 767px) {
+  .contacts__icon--envelope {
+    display: none;
+  }
+}
 .contacts__icon--smartphone {
   margin-right: 10px;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   fill: #757575;
+}
+@media screen and (max-width: 767px) {
+  .contacts__icon--smartphone {
+    display: none;
+  }
 }
 .contacts__link:hover .contacts__icon--envelope, .contacts__link:hover .contacts__icon--smartphone, .contacts__link:focus .contacts__icon--envelope, .contacts__link:focus .contacts__icon--smartphone {
   fill: #2196f3;
