--- a/css/main.css
+++ b/css/main.css
@@ -142,6 +142,7 @@ ul {
     padding-left: 40px;
     background-color: #ffffff;
     overflow-y: hidden;
+    z-index: 9;
   }
 }
 @media screen and (max-width: 767px) and (min-width: 768px) {
@@ -166,7 +167,7 @@ ul {
   }
 }
 .navigation-contacts-item .contacts__link.tel {
-  margin-top: 302px;
+  margin-top: 45%;
   margin-bottom: 30px;
   font-size: 34px;
   line-height: 1.17;
@@ -953,7 +954,8 @@ ul {
 }
 @media screen and (max-width: 1199px) {
   .modal {
-    min-width: 450px;
+    width: 95%;
+    min-width: 50%;
   }
 }
 .modal__close-button {
@@ -1063,6 +1065,11 @@ ul {
     align-items: flex-end;
     font-size: 12px;
     line-height: 1.16;
+  }
+}
+@media screen and (max-width: 459px) {
+  .modal__policy {
+    align-items: center;
   }
 }
 @media (min-width: 768px) and (max-width: 1199px) {
