--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -32,7 +32,8 @@
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   @media screen and (max-width: 1199px) {
-    min-width: 450px;
+    width: 95%;
+    min-width: 50%;
   }
 
   &__close-button {
@@ -137,6 +138,10 @@
       align-items: flex-end;
       font-size: 12px;
       line-height: 1.16;
+    }
+
+    @media screen and (max-width: 459px) {
+      align-items: center;
     }
 
     @media (min-width: 768px) and (max-width: 1199px) {
