--- a/css/main.css
+++ b/css/main.css
@@ -145,6 +145,11 @@ ul {
     z-index: 9;
   }
 }
+@media screen and (max-width: 767px) and (max-width: 400px) {
+  .navigation.is-open {
+    padding-left: 0;
+  }
+}
 @media screen and (max-width: 767px) and (min-width: 768px) {
   .navigation.is-open {
     display: none;
@@ -1123,6 +1128,13 @@ ul {
   list-style: none;
   justify-content: center;
   margin-bottom: 50px;
+  gap: 8px;
+}
+@media (max-width: 767px) {
+  .filter__list {
+    flex-wrap: wrap;
+    margin-bottom: 40px;
+  }
 }
 .filter__button {
   padding: 6px 22px;
@@ -1138,12 +1150,6 @@ ul {
   border: 0;
   border-radius: 4px;
   cursor: pointer;
-}
-.filter__item {
-  margin-right: 8px;
-}
-.filter__item:last-child {
-  margin-right: 0px;
 }
 .filter__button:hover, .filter__button:focus {
   background-color: #2196f3;
@@ -1164,11 +1170,26 @@ ul {
   list-style: none;
   gap: 30px;
 }
+@media (max-width: 767px) {
+  .filtered__list {
+    justify-content: space-around;
+  }
+}
 .filtered__item {
   width: 370px;
 }
+@media (min-width: 767px) and (max-width: 1199px) {
+  .filtered__item {
+    width: 47.95%;
+  }
+}
 .filtered__item--image {
   display: block;
+}
+@media (min-width: 767px) and (max-width: 1199px) {
+  .filtered__item--image {
+    width: 100%;
+  }
 }
 .filtered__link {
   display: block;
