--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -30,20 +30,25 @@
   list-style: none;
 
   @media screen and (max-width: 767px) {
-    display: none;
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    padding-top: 48px;
+    padding-left: 40px;
+    background-color: $color-white;
+    z-index: 9;
+    opacity: 0;
+    transform: translateY(-200%);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    overflow-y: auto;
 
     &.is-open {
-      display: block;
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100vh;
-      padding-top: 48px;
-      padding-left: 40px;
-      background-color: $color-white;
-      overflow-y: hidden;
-      z-index: 9;
+      position: absolute;
+      opacity: 1;
+      transform: translate(0%);
 
       @media screen and (max-width: 400px) {
         padding-left: 0;
@@ -98,32 +103,28 @@
     border: none;
     background-color: transparent;
 
+    @media screen and (max-width: 767px) {
+      display: block;
+      position: absolute;
+      right: 16px;
+      top: 10px;
+      z-index: 10;
+    }
+
     @media screen and (min-width: 768px) {
       display: none;
     }
 
-    &.is-open {
-      display: block;
-      position: fixed;
-      right: 16px;
-      top: 10px;
-      z-index: 10;
-
-      @media screen and (min-width: 768px) {
+    &[aria-expanded='true'] {
+      .navigation__button--icon-open {
         display: none;
       }
     }
 
-    &--icon-close {
-      display: none;
-    }
-
-    &.is-open &--icon-close {
-      display: block;
-    }
-
-    &.is-open &--icon-open {
-      display: none;
+    &[aria-expanded='false'] {
+      .navigation__button--icon-close {
+        display: none;
+      }
     }
   }
 
