--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -51,7 +51,7 @@
       transform: translate(0%);
 
       @media screen and (max-width: 400px) {
-        padding-left: 0;
+        padding-left: 10px;
       }
 
       @media screen and (min-width: 768px) {
