--- a/css/main.css
+++ b/css/main.css
@@ -158,7 +158,7 @@ img {
 }
 @media screen and (max-width: 767px) and (max-width: 400px) {
   .navigation.is-open {
-    padding-left: 0;
+    padding-left: 10px;
   }
 }
 @media screen and (max-width: 767px) and (min-width: 768px) {
