--- a/css/main.css
+++ b/css/main.css
@@ -158,7 +158,7 @@ img {
 }
 @media screen and (max-width: 767px) and (max-width: 400px) {
   .navigation.is-open {
-    padding-left: 10px;
+    padding-left: 5px;
   }
 }
 @media screen and (max-width: 767px) and (min-width: 768px) {
@@ -1231,6 +1231,11 @@ img {
   color: #ffffff;
   letter-spacing: 0.03em;
   opacity: 0;
+}
+@media screen and (max-width: 767px) {
+  .filtered__text--overlay {
+    padding: 35px 24px;
+  }
 }
 .filtered__link:hover .filtered__text--overlay, .filtered__link:focus .filtered__text--overlay {
   opacity: 0.9;
