--- a/css/main.css
+++ b/css/main.css
@@ -366,6 +366,12 @@ img {
     display: none;
   }
 }
+@media (min-width: 768px) and (max-width: 1200px) {
+  .contacts__icon--envelope {
+    width: 14px;
+    height: 10px;
+  }
+}
 .contacts__icon--smartphone {
   margin-right: 10px;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -374,6 +380,12 @@ img {
 @media screen and (max-width: 767px) {
   .contacts__icon--smartphone {
     display: none;
+  }
+}
+@media (min-width: 768px) and (max-width: 1199px) {
+  .contacts__icon--smartphone {
+    width: 10px;
+    height: 14px;
   }
 }
 .contacts__link:hover .contacts__icon--envelope, .contacts__link:hover .contacts__icon--smartphone, .contacts__link:focus .contacts__icon--envelope, .contacts__link:focus .contacts__icon--smartphone {
@@ -442,7 +454,7 @@ img {
 }
 @media screen and (max-width: 767px) {
   .hero__title {
-    width: 100%;
+    max-width: 360px;
     font-size: 26px;
     line-height: 1.62;
   }
@@ -515,7 +527,6 @@ img {
   font-family: inherit;
   font-size: 14px;
   line-height: 1.71;
-  width: 270px;
 }
 @media screen and (max-width: 767px) {
   .benefits__text {
@@ -948,6 +959,7 @@ img {
   background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  z-index: 12;
 }
 
 .backdrop.is-hidden {
@@ -966,16 +978,25 @@ img {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
-  min-width: 528px;
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-@media screen and (max-width: 767px) {
+@media (max-width: 479px) {
   .modal {
-    width: 95%;
-    min-width: 50%;
+    min-width: 95%;
+    max-width: 450px;
+  }
+}
+@media (min-width: 480px) and (max-width: 1199px) {
+  .modal {
+    width: 450px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .modal {
+    min-width: 528px;
   }
 }
 .modal__close-button {
@@ -1082,14 +1103,9 @@ img {
 }
 @media screen and (max-width: 767px) {
   .modal__policy {
-    align-items: flex-end;
+    align-items: center;
     font-size: 12px;
     line-height: 1.16;
-  }
-}
-@media screen and (max-width: 459px) {
-  .modal__policy {
-    align-items: center;
   }
 }
 @media (min-width: 768px) and (max-width: 1199px) {
