--- a/sass/components/_hero-section.scss
+++ b/sass/components/_hero-section.scss
@@ -44,7 +44,7 @@
     color: $color-white;
 
     @media screen and (max-width: 767px) {
-      width: 100%;
+      max-width: 360px;
       font-size: 26px;
       line-height: 1.62;
     }
